Eclipse warnings in util